# cmake-template

./: .gitignore  CMakeLists.txt  README.md
CMake/: CompileConfig.cmake  FindXtensorAll.cmake
cpp/: CMakeLists.txt
cpp/vtk_demo/: CMakeLists.txt
cpp/vtk_demo/src/: demo.cpp
cu/: CMakeLists.txt
cu/Add/: CMakeLists.txt
cu/Add/include/: add.h
cu/Add/src/: add_kernel.cu  main.cpp
pycpp/: CMakeLists.txt
pycpp/CppCallPy/: CMakeLists.txt
pycpp/CppCallPy/include/: pywarp.h
pycpp/CppCallPy/src/: pywarp.cpp  test.cpp
